# openclaw-session-viewer

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  CHANGELOG.md  LICENSE  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
.github/workflows/scripts/: extract-changelog.sh  inject-version.sh
.husky/: pre-commit
docs/: ARCHITECTURE.md  CROSS_PLATFORM_BUILD.md  E2E_TESTING.md  OPENCLAW_SESSION_FORMAT.md  PARSER_ARCHITECTURE.md  RELEASING.md  SECURITY.md  TROUBLESHOOTING.md
docs/experiments/: README.md  embed-db-G1-graph-findings.md  embed-db-G2-olap-findings.md  embed-db-G3-rag-findings.md  embed-db-S0-findings.md  embed-db-findings.md
e2e/: detail-page.spec.ts  global-setup.ts  smoke.spec.ts
experiment/embed-db/: Cargo.toml
experiment/embed-db/ingest/: Cargo.toml
experiment/embed-db/ingest/src/: cli.rs  graph.rs  main.rs  parser.rs  scanner.rs
experiment/embed-db/ingest/src/sinks/: mod.rs  stdout.rs
experiment/embed-db/web/: package.json
experiment/embed-db/web/public/: sessions.ndjson
experiment/embed-db/web/src/: Analytics.css  App.css  App.tsx  analytics.ts  graph-types.ts  loader.ts  rag.ts  title.ts  titleStore.tsx  types.ts
experiment/embed-db/web/src/views/: AnalyticsView.tsx  GraphDetailPanel.css  GraphDetailPanel.tsx  GraphView.tsx  RagChat.css  RagChat.tsx
fixtures/: sample-claude.jsonl
scripts/: build-icon.mjs  seed-fixture.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/cache/: mod.rs  mtime.rs
src-tauri/src/commands/: analyze.rs  export.rs  fs_cmd.rs  live.rs  mod.rs  search.rs  sessions.rs  settings.rs  spillover.rs  subagents.rs  trajectory.rs  transcript.rs
src-tauri/src/fs/: mod.rs  paths.rs  walker.rs
src-tauri/src/llm/: anthropic.rs  context.rs  mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/parser/: claude.rs  jsonl.rs  mod.rs  openclaw.rs  trajectory.rs
src-tauri/src/parser/blocks/: agent_listing.rs  agent_name.rs  file_snapshot.rs  image.rs  meta.rs  mod.rs  plan_mode.rs  pr_link.rs  skill_listing.rs  task_reminder.rs  text.rs  thinking.rs  tool_result.rs  tool_use.rs
