[package]
name = "openclaw-session-viewer"
version = "0.1.0"
description = "跨平台桌面应用 - 浏览本地 OpenClaw / Claude Code 会话"
authors = ["OpenClaw Viewer Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ocsv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openclaw-session-viewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
notify = "6"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
eventsource-stream = "0.2"
dirs = "5"
walkdir = "2"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
sanitize-filename = "0.5"
pulldown-cmark = "0.12"
syntect = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# panic = "unwind"(默认)而非 abort:
# - 让 std::panic::catch_unwind 能工作(单条记录/会话 panic 不影响整个 app)
# - 让 std::panic::set_hook 能拦截(我们注册了 log + 不 abort 的 hook)
# - 调试期能看到 backtrace;release 期性能影响 < 1%
codegen-units = 1
lto = true
opt-level = "s"
strip = "debuginfo"
