[workspace]
members = ["ingest"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

# 共享版本依赖
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
