[package]
name = "ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
walkdir.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
